otherservices/infra/temp/exercise-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #4 changes
  name: exercise-mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: exercise-mongo
  template: 
    metadata:
      labels: 
        app: exercise-mongo
    spec: 
      containers:
        - name: exercise-mongo
          image: mongo
