otherservices/infra/temp/exercisetrack-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #4 changes
  name: exercisetrack-mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: exercisetrack-mongo
  template: 
    metadata:
      labels: 
        app: exercisetrack-mongo
    spec: 
      containers:
        - name: exercisetrack-mongo
          image: mongo
