otherservices/infra/temp/nutritionfacts-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #4 changes
  name: nutritionfacts-mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: nutritionfacts-mongo
  template: 
    metadata:
      labels: 
        app: nutritionfacts-mongo
    spec: 
      containers:
        - name: nutritionfacts-mongo
          image: mongo
