otherservices/infra/temp/exercisereminder-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercisereminder-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercisereminder
  template:
    metadata: 
      labels:
        app: exercisereminder
    spec: 
      containers:
        - name: exercisereminder
          image: noman173652/exercisereminder
---
apiVersion: v1
kind: Service
metadata:
  name: exercisereminder-srv
spec: 
  selector:
    app: exercisereminder
  ports:
    - name: exercisereminder
      protocol: TCP
      port: 3022
      targetPort: 3022
