otherservices/infra/temp/nutritionfacts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutritionfacts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nutritionfacts
  template:
    metadata: 
      labels:
        app: nutritionfacts
    spec: 
      containers:
        - name: nutritionfacts
          image: noman173652/nutritionfacts
---
apiVersion: v1
kind: Service
metadata:
  name: nutritionfacts-srv
spec: 
  selector:
    app: nutritionfacts
  ports:
    - name: nutritionfacts
      protocol: TCP
      port: 3030
      targetPort: 3030
