otherservices/infra/temp/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata: 
      labels:
        app: user
    spec: 
      containers:
        - name: user
          image: noman173652/user
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec: 
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 3010
      targetPort: 3010
