otherservices/infra/temp/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-servivce
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: daers.dev
      http:
        paths:
          - path: /api/user/?(.*)
            backend:
              serviceName: user-srv
              servicePort: 3010
          - path: /api/exercise/?(.*)
            backend:
              serviceName: exercise-srv
              servicePort: 3020
          - path: /api/nutritionfacts/?(.*)
            backend:
              serviceName: nutritionfacts-srv
              servicePort: 3030
          - path: /api/exerciseschedule/?(.*)
            backend:
              serviceName: exerciseschedule-srv
              servicePort: 3021
          - path: /api/nutritionschedule/?(.*)
            backend:
              serviceName: nutritionschedule-srv
              servicePort: 3031
          - path: /api/exercisereminder/?(.*)
            backend:
              serviceName: exercisereminder-srv
              servicePort: 3022
          # - path: /?(.*)
          #   backend:
          #     serviceName: client-srv
          #     servicePort: 3000
